prod/storeserviceat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storeserviceat
  labels:
    app: storeserviceat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storeserviceat
  template:
    metadata:
      labels:
        app: storeserviceat
    spec:
      containers:
      - name: storeserviceat
        image: natanborrges/storeserviceat:221214.79a7033
