prod/storeserviceat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storeserviceat

spec:
  selector:
    app: storeserviceat

  type: ClusterIP
  ports:
    - port: 3064
      targetPort: 3064
