prod/storeserviceat-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
 
metadata:
  name: storeserviceat
 
spec:
  ingressClassName: kong
  rules:
  - host: store.bloco.live
    http:
      paths:
      - backend:
          service:
            name: storeserviceat
            port:
              number: 3064
        path: /
        pathType: Prefix
